--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-paginate": "^8.1.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-secure-storage": "^1.0.21",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -33,6 +42,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "plugins": [
+      "react-hot-loader/babel"
     ]
   }
 }
